move some logic to jigsaw plugin