@@ -1,7 +1,7 @@
 apply plugin: 'com.palantir.jigsaw-patch'
 
 needsPatching {
-    module = "com.fasterxml.jackson.databind"
+    implementation "com.fasterxml.jackson.core:jackson-databind"
 }
 
 dependencies {
@@ -29,21 +29,6 @@ task merge(type: Copy, dependsOn: [unpack, jdeps]) {
     into("$buildDir/unpack/${jarName}")
     eachFile { details -> details.path = file(details.path).getName() }
     includeEmptyDirs = false
-}
-
-task compileModuleInfo(type: Exec, dependsOn: merge) {
-
-    def input = file("$buildDir/unpack/${jarName}/module-info.java")
-    def outputDir = file("$buildDir/compileModuleInfo/${jarName}")
-
-    commandLine "javac",
-        "-d", outputDir,
-        "--module-path", "../jackson-core/build/patchJar/jackson-core-2.9.5.jar:../jackson-annotations/build/patchJar/jackson-annotations-2.9.5.jar",
-        "--add-modules", needsPatching.module,
-        "--patch-module", "${needsPatching.module}=$buildDir/unpack/${jarName}",
-        input
-
-    outputs.dir outputDir
 }
 
 task copyJarForPatching(type: Copy) {
